# UnicornAndroid-NeurofeedbackAPP

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: frag.glsl  vert.glsl
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  unicornandroidapi.cpp
app/src/main/java/gtec/java/unicornandroidapi/: AudioDeviceAdapter.java  AudioDeviceInfoConverter.java  AudioDeviceListEntry.java  AudioDeviceSpinner.java  BandPassFilter.java  Gl_Handler.java  MainActivity.java  PlaybackEngine.java  Renderer.java  Renderer_frag.java  Util.java
app/src/main/res/layout/: activity_main.xml  audio_apis_spinner.xml  audio_devices.xml  buffer_sizes_spinner.xml  channel_counts_spinner.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: dimens.xml  themes.xml
gdx/: build.gradle
gdx/src/androidTest/java/com/example/gdx/: ExampleInstrumentedTest.java
gdx/src/main/: AndroidManifest.xml
gdx/src/test/java/com/example/gdx/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
oboe/src/androidTest/java/com/google/oboe/: ExampleInstrumentedTest.java
oboe/src/main/: AndroidManifest.xml
oboe/src/test/java/com/google/oboe/: ExampleUnitTest.java
unicorn/: build.gradle
unicorn/src/main/: AndroidManifest.xml
unicorn/src/main/java/neuro/tools/unicorn/: DataAnalysis.java  DataView.java  GenericFunctions.java
